--- a/style.css
+++ b/style.css
@@ -16,17 +16,38 @@ body {
     font-family: 'PT Sans', sans-serif;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 /* ----------Start styles Header------------- */
 .container-header {
     width: 100%;
-    height: 90px;
+    height: 100px;
     background-color: var(--color-grey-blue-dark);
 }
 
 .search {
     float: right;
-    margin: 20px;
+    margin: 15px;
+    padding: 20px;
+    width: 300px;
+    border-radius: 50px;
+    background-color: var(--color-grey-blue-light);
+    border: 1px solid var(--color-grey-blue-light);
     outline: none;
+    color: var(--color-lightGrey);
+    font-size: 20px;
+}
+
+.search:hover, .search:active {
+    box-shadow: 1px 0 40px 2px #0ff;
+}
+
+.search::placeholder {
+    color: var(--color-grey-blue-dark);
+    font-weight: bold;
 }
 /* ----------End styles Header------------- */
 
@@ -57,7 +78,7 @@ body {
     bottom: 0;
     display: none;
     padding: 15px;
-    width: 100%;
+    max-width: 100%;
     height: auto;
     max-height: 100%;
     background-color: var(--color-lightGrey);
